Started migrating training to functions

--- a/Training without colab.ipynb
+++ b/Training without colab.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf version:  2.1.0\n"
+      "tf versionn:  2.1.0\n"
      ]
     }
    ],
@@ -20,6 +20,11 @@
     "from my_ddsp_utils import *\n",
     "import ddsp\n",
     "import ddsp.training\n",
+    "\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "print(\"tf versionn: \",tf.__version__)\n",
+    "# tf.compat.v1.enable_v2_behavior()\n",
+    "import tensorflow_datasets as tfds\n",
     "\n",
     "import time\n",
     "import tensorflow_datasets as tfds\n"
@@ -34,10 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -47,43 +50,34 @@
       "WARNING:tensorflow:From /Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/tensorflow_core/python/compat/v2_compat.py:88: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "I0218 12:16:48.446970 4576056768 fn_api_runner_transforms.py:490] ==================== <function annotate_downstream_side_inputs at 0x7fa9eb8db620> ====================\n",
-      "I0218 12:16:48.448128 4576056768 fn_api_runner_transforms.py:490] ==================== <function fix_side_input_pcoll_coders at 0x7fa9eb8db730> ====================\n",
-      "I0218 12:16:48.448930 4576056768 fn_api_runner_transforms.py:490] ==================== <function lift_combiners at 0x7fa9eb8db7b8> ====================\n",
-      "I0218 12:16:48.449234 4576056768 fn_api_runner_transforms.py:490] ==================== <function expand_sdf at 0x7fa9eb8db840> ====================\n",
-      "I0218 12:16:48.449673 4576056768 fn_api_runner_transforms.py:490] ==================== <function expand_gbk at 0x7fa9eb8db8c8> ====================\n",
-      "I0218 12:16:48.450812 4576056768 fn_api_runner_transforms.py:490] ==================== <function sink_flattens at 0x7fa9eb8db9d8> ====================\n",
-      "I0218 12:16:48.451232 4576056768 fn_api_runner_transforms.py:490] ==================== <function greedily_fuse at 0x7fa9eb8dba60> ====================\n",
-      "I0218 12:16:48.453469 4576056768 fn_api_runner_transforms.py:490] ==================== <function read_to_impulse at 0x7fa9eb8dbae8> ====================\n",
-      "I0218 12:16:48.453630 4576056768 fn_api_runner_transforms.py:490] ==================== <function impulse_to_input at 0x7fa9eb8dbb70> ====================\n",
-      "I0218 12:16:48.453813 4576056768 fn_api_runner_transforms.py:490] ==================== <function inject_timer_pcollections at 0x7fa9eb8dbd08> ====================\n",
-      "I0218 12:16:48.454160 4576056768 fn_api_runner_transforms.py:490] ==================== <function sort_stages at 0x7fa9eb8dbd90> ====================\n",
-      "I0218 12:16:48.454289 4576056768 fn_api_runner_transforms.py:490] ==================== <function window_pcollection_coders at 0x7fa9eb8dbe18> ====================\n",
-      "I0218 12:16:48.456233 4576056768 statecache.py:137] Creating state cache with size 100\n",
-      "I0218 12:16:48.457012 4576056768 fn_api_runner.py:1538] Created Worker handler <apache_beam.runners.portability.fn_api_runner.EmbeddedWorkerHandler object at 0x7fa9eb910a58> for environment urn: \"beam:env:embedded_python:v1\"\n",
+      "I0219 02:16:22.407964 4528076224 fn_api_runner_transforms.py:490] ==================== <function annotate_downstream_side_inputs at 0x7fbfa200a620> ====================\n",
+      "I0219 02:16:22.408634 4528076224 fn_api_runner_transforms.py:490] ==================== <function fix_side_input_pcoll_coders at 0x7fbfa200a730> ====================\n",
+      "I0219 02:16:22.409061 4528076224 fn_api_runner_transforms.py:490] ==================== <function lift_combiners at 0x7fbfa200a7b8> ====================\n",
+      "I0219 02:16:22.409200 4528076224 fn_api_runner_transforms.py:490] ==================== <function expand_sdf at 0x7fbfa200a840> ====================\n",
+      "I0219 02:16:22.409456 4528076224 fn_api_runner_transforms.py:490] ==================== <function expand_gbk at 0x7fbfa200a8c8> ====================\n",
+      "I0219 02:16:22.409881 4528076224 fn_api_runner_transforms.py:490] ==================== <function sink_flattens at 0x7fbfa200a9d8> ====================\n",
+      "I0219 02:16:22.410040 4528076224 fn_api_runner_transforms.py:490] ==================== <function greedily_fuse at 0x7fbfa200aa60> ====================\n",
+      "I0219 02:16:22.411374 4528076224 fn_api_runner_transforms.py:490] ==================== <function read_to_impulse at 0x7fbfa200aae8> ====================\n",
+      "I0219 02:16:22.411488 4528076224 fn_api_runner_transforms.py:490] ==================== <function impulse_to_input at 0x7fbfa200ab70> ====================\n",
+      "I0219 02:16:22.411621 4528076224 fn_api_runner_transforms.py:490] ==================== <function inject_timer_pcollections at 0x7fbfa200ad08> ====================\n",
+      "I0219 02:16:22.411874 4528076224 fn_api_runner_transforms.py:490] ==================== <function sort_stages at 0x7fbfa200ad90> ====================\n",
+      "I0219 02:16:22.411967 4528076224 fn_api_runner_transforms.py:490] ==================== <function window_pcollection_coders at 0x7fbfa200ae18> ====================\n",
+      "I0219 02:16:22.413647 4528076224 statecache.py:137] Creating state cache with size 100\n",
+      "I0219 02:16:22.414360 4528076224 fn_api_runner.py:1538] Created Worker handler <apache_beam.runners.portability.fn_api_runner.EmbeddedWorkerHandler object at 0x7fbf70833048> for environment urn: \"beam:env:embedded_python:v1\"\n",
       "\n",
-      "I0218 12:16:48.457295 4576056768 fn_api_runner.py:693] Running (((((((((ref_AppliedPTransform_Create/Impulse_3)+(ref_AppliedPTransform_Create/FlatMap(<lambda at core.py:2530>)_4))+(ref_AppliedPTransform_Create/Map(decode)_6))+(ref_AppliedPTransform_Map(_load_audio)_7))+(ref_AppliedPTransform_Map(_add_f0_estimate)_8))+(ref_AppliedPTransform_Map(_add_loudness)_9))+(ref_AppliedPTransform_FlatMap(_split_example)_10))+(ref_AppliedPTransform_Reshuffle/AddRandomKeys_12))+(ref_AppliedPTransform_Reshuffle/ReshufflePerKey/Map(reify_timestamps)_14))+(Reshuffle/ReshufflePerKey/GroupByKey/Write)\n",
-      "I0218 12:16:48.490985 123145460494336 prepare_tfrecord_lib.py:30] Loading './Data/piano/piano30s.wav'.\n",
+      "I0219 02:16:22.414582 4528076224 fn_api_runner.py:693] Running (((((ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/DoOnce/Impulse_26)+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/DoOnce/FlatMap(<lambda at core.py:2530>)_27))+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/DoOnce/Map(decode)_29))+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/InitializeWrite_30))+(ref_PCollection_PCollection_18/Write))+(ref_PCollection_PCollection_19/Write)\n",
+      "I0219 02:16:22.451866 4528076224 fn_api_runner.py:693] Running (((((((((ref_AppliedPTransform_Create/Impulse_3)+(ref_AppliedPTransform_Create/FlatMap(<lambda at core.py:2530>)_4))+(ref_AppliedPTransform_Create/Map(decode)_6))+(ref_AppliedPTransform_Map(_load_audio)_7))+(ref_AppliedPTransform_Map(_add_f0_estimate)_8))+(ref_AppliedPTransform_Map(_add_loudness)_9))+(ref_AppliedPTransform_FlatMap(_split_example)_10))+(ref_AppliedPTransform_Reshuffle/AddRandomKeys_12))+(ref_AppliedPTransform_Reshuffle/ReshufflePerKey/Map(reify_timestamps)_14))+(Reshuffle/ReshufflePerKey/GroupByKey/Write)\n",
+      "I0219 02:16:22.485298 123145347481600 prepare_tfrecord_lib.py:30] Loading './Data/piano/piano30s.wav'.\n",
       "WARNING:tensorflow:From /Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1635: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "If using Keras pass *_constraint arguments to layers.\n",
-      "W0218 12:16:49.689881 123145460494336 deprecation.py:506] From /Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1635: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "W0219 02:16:23.666270 123145347481600 deprecation.py:506] From /Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1635: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "If using Keras pass *_constraint arguments to layers.\n",
-      "2020-02-18 12:16:50.119487: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
-      "2020-02-18 12:16:50.140437: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fa9af98b8c0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2020-02-18 12:16:50.140456: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
-      "/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/librosa/core/time_frequency.py:1208: RuntimeWarning: divide by zero encountered in log10\n",
-      "  - 0.5 * np.log10(f_sq + const[3]))\n",
-      "I0218 12:17:50.127428 4576056768 fn_api_runner.py:693] Running ((((((Reshuffle/ReshufflePerKey/GroupByKey/Read)+(ref_AppliedPTransform_Reshuffle/ReshufflePerKey/FlatMap(restore_timestamps)_19))+(ref_AppliedPTransform_Reshuffle/RemoveRandomKeys_20))+(ref_AppliedPTransform_Map(_float_dict_to_tfexample)_21))+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/ParDo(_RoundRobinKeyFn)_31))+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/WindowInto(WindowIntoFn)_32))+(WriteToTFRecord/Write/WriteImpl/GroupByKey/Write)\n",
-      "I0218 12:17:50.579326 4576056768 fn_api_runner.py:693] Running (((((ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/DoOnce/Impulse_26)+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/DoOnce/FlatMap(<lambda at core.py:2530>)_27))+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/DoOnce/Map(decode)_29))+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/InitializeWrite_30))+(ref_PCollection_PCollection_18/Write))+(ref_PCollection_PCollection_19/Write)\n",
-      "I0218 12:17:50.611551 4576056768 fn_api_runner.py:693] Running ((WriteToTFRecord/Write/WriteImpl/GroupByKey/Read)+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/WriteBundles_37))+(ref_PCollection_PCollection_25/Write)\n",
-      "W0218 12:17:50.646480 123145460494336 tfrecordio.py:60] Couldn't find python-snappy so the implementation of _TFRecordUtil._masked_crc32c is not as fast as it could be.\n",
-      "I0218 12:17:50.684448 4576056768 fn_api_runner.py:693] Running ((ref_PCollection_PCollection_18/Read)+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/PreFinalize_38))+(ref_PCollection_PCollection_26/Write)\n",
-      "W0218 12:17:50.692338 123145460494336 filebasedsink.py:217] Deleting 10 existing files in target path matching: -*-of-%(num_shards)05d\n",
-      "I0218 12:17:50.700649 4576056768 fn_api_runner.py:693] Running (ref_PCollection_PCollection_18/Read)+(ref_AppliedPTransform_WriteToTFRecord/Write/WriteImpl/FinalizeWrite_39)\n",
-      "I0218 12:17:50.709260 123145460494336 filebasedsink.py:294] Starting finalize_write threads with num_shards: 10 (skipped: 0), batches: 10, num_threads: 10\n",
-      "I0218 12:17:50.816306 123145460494336 filebasedsink.py:331] Renamed 10 shards in 0.11 seconds.\n"
+      "2020-02-19 02:16:24.082810: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
+      "2020-02-19 02:16:24.099710: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fbf0dc1a300 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2020-02-19 02:16:24.099730: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "^C\n"
      ]
     }
    ],
@@ -210,7 +204,7 @@
     }
    ],
    "source": [
-    "# get distribution strategy\n",
+    "# get distribution strategy (change if using gpus/tpus)\n",
     "strategy = ddsp.training.train_util.get_strategy()"
    ]
   },
