got restoring models to work

--- a/Training without colab.ipynb
+++ b/Training without colab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,8 +26,7 @@
     "# tf.compat.v1.enable_v2_behavior()\n",
     "import tensorflow_datasets as tfds\n",
     "\n",
-    "import time\n",
-    "import tensorflow_datasets as tfds\n"
+    "import time\n"
    ]
   },
   {
