getting a lot closer on generating data pipeline

--- a/Notebooks/trainFromScratchTest.ipynb
+++ b/Notebooks/trainFromScratchTest.ipynb
@@ -109,47 +109,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:absl:found ./models/gan/\n",
-      "INFO:absl:MODEL_DIR: ./models/gan/ FOUND: True\n",
-      "INFO:absl:Defaulting to MirroredStrategy\n"
+      "INFO:absl:tf versionn: 2.1.0\n",
+      "[autoreload of ddsp.training.train_util failed: Traceback (most recent call last):\n",
+      "  File \"/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/imp.py\", line 315, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/importlib/__init__.py\", line 166, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 618, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 678, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/ddsp/training/train_util.py\", line 120, in <module>\n",
+      "    class Trainer(object):\n",
+      "  File \"/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/gin/config.py\", line 1252, in configurable\n",
+      "    return perform_decoration(decoration_target)\n",
+      "  File \"/Users/trippgordon/miniconda3/envs/ddsp/lib/python3.6/site-packages/gin/config.py\", line 1249, in perform_decoration\n",
+      "    return _make_configurable(fn_or_cls, name, module, whitelist, blacklist)\n",
+      "ValueError: A configurable matching 'ddsp.training.train_util.Trainer' already exists.\n",
+      "\n",
+      "To allow re-registration of configurables in an interactive environment, use:\n",
+      "\n",
+      "    gin.enter_interactive_mode()\n",
+      "]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:There are non-GPU devices in `tf.distribute.Strategy`, not using nccl allreduce.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:There are non-GPU devices in `tf.distribute.Strategy`, not using nccl allreduce.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:CPU:0',)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:CPU:0',)\n",
-      "INFO:absl:restoring... ./models/gan/ckpt-7\n",
-      "INFO:absl:Loaded checkpoint ./models/gan/ckpt-7\n",
-      "INFO:absl:Loading model took 0.0 seconds\n"
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-105493232128>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmodel_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"./models/gan/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSolo_Autoencoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtrainer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDDSP_TRAINER\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_dir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'model'"
      ]
     }
    ],
