cleaned up whole repo, took out the trash, made an actual training loop for GAN, took everything out of gan notebook and put it in files

--- a/Notebooks/mnistGAN.ipynb
+++ b/Notebooks/mnistGAN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "((60000, 28, 28), (60000,))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,32 +79,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_3 (Conv2D)            (None, 14, 14, 64)        640       \n",
+      "conv2d (Conv2D)              (None, 14, 14, 64)        640       \n",
       "_________________________________________________________________\n",
-      "batch_normalization_5 (Batch (None, 14, 14, 64)        256       \n",
+      "batch_normalization (BatchNo (None, 14, 14, 64)        256       \n",
       "_________________________________________________________________\n",
-      "leaky_re_lu_5 (LeakyReLU)    (None, 14, 14, 64)        0         \n",
+      "leaky_re_lu (LeakyReLU)      (None, 14, 14, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 7, 7, 64)          36928     \n",
+      "conv2d_1 (Conv2D)            (None, 7, 7, 64)          36928     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_6 (Batch (None, 7, 7, 64)          256       \n",
+      "batch_normalization_1 (Batch (None, 7, 7, 64)          256       \n",
       "_________________________________________________________________\n",
-      "leaky_re_lu_6 (LeakyReLU)    (None, 7, 7, 64)          0         \n",
+      "leaky_re_lu_1 (LeakyReLU)    (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 3136)              0         \n",
+      "flatten (Flatten)            (None, 3136)              0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 3137      \n",
+      "dense (Dense)                (None, 1)                 3137      \n",
       "=================================================================\n",
       "Total params: 41,217\n",
       "Trainable params: 40,961\n",
@@ -133,38 +133,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_3 (Dense)              (None, 3136)              316736    \n",
+      "dense_1 (Dense)              (None, 3136)              316736    \n",
       "_________________________________________________________________\n",
-      "batch_normalization_7 (Batch (None, 3136)              12544     \n",
+      "batch_normalization_2 (Batch (None, 3136)              12544     \n",
       "_________________________________________________________________\n",
-      "leaky_re_lu_7 (LeakyReLU)    (None, 3136)              0         \n",
+      "leaky_re_lu_2 (LeakyReLU)    (None, 3136)              0         \n",
       "_________________________________________________________________\n",
-      "reshape_1 (Reshape)          (None, 7, 7, 64)          0         \n",
+      "reshape (Reshape)            (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_transpose_2 (Conv2DTr (None, 14, 14, 64)        36928     \n",
+      "conv2d_transpose (Conv2DTran (None, 14, 14, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_8 (Batch (None, 14, 14, 64)        256       \n",
+      "batch_normalization_3 (Batch (None, 14, 14, 64)        256       \n",
       "_________________________________________________________________\n",
-      "leaky_re_lu_8 (LeakyReLU)    (None, 14, 14, 64)        0         \n",
+      "leaky_re_lu_3 (LeakyReLU)    (None, 14, 14, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_transpose_3 (Conv2DTr (None, 28, 28, 64)        36928     \n",
+      "conv2d_transpose_1 (Conv2DTr (None, 28, 28, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "batch_normalization_9 (Batch (None, 28, 28, 64)        256       \n",
+      "batch_normalization_4 (Batch (None, 28, 28, 64)        256       \n",
       "_________________________________________________________________\n",
-      "leaky_re_lu_9 (LeakyReLU)    (None, 28, 28, 64)        0         \n",
+      "leaky_re_lu_4 (LeakyReLU)    (None, 28, 28, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 28, 28, 1)         577       \n",
+      "conv2d_2 (Conv2D)            (None, 28, 28, 1)         577       \n",
       "=================================================================\n",
       "Total params: 404,225\n",
       "Trainable params: 397,697\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -205,13 +205,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "sequential_3 (Sequential)    (None, 28, 28, 1)         404225    \n",
+      "sequential_1 (Sequential)    (None, 28, 28, 1)         404225    \n",
       "_________________________________________________________________\n",
-      "sequential_2 (Sequential)    (None, 1)                 41217     \n",
+      "sequential (Sequential)      (None, 1)                 41217     \n",
       "=================================================================\n",
       "Total params: 445,442\n",
       "Trainable params: 397,697\n",
@@ -237,20 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1, 28, 28, 1), (1,))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def select_real_samples(dataset, n_batch):\n",
     "    number_of_rows = dataset.shape[0]\n",
@@ -258,13 +247,13 @@
     "    random_rows = dataset[random_indices, :]\n",
     "    random_rows = np.expand_dims(random_rows,axis=3)\n",
     "    return random_rows, np.ones(n_batch)\n",
-    "n_batch = 1\n",
-    "select_real_samples(x_train, n_batch)[0].shape,select_real_samples(x_train, n_batch)[1].shape"
+    "# n_batch = 1\n",
+    "# select_real_samples(x_train, n_batch)[0].shape,select_real_samples(x_train, n_batch)[1].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,12 +264,12 @@
     "\tx_input = x_input.reshape(n_batch, latent_dim)\n",
     "\treturn x_input\n",
     "\n",
-    "generate_latent_points(latent_dim, n_batch).shape"
+    "# generate_latent_points(latent_dim, n_batch).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,39 +279,19 @@
     "    y_fake = np.zeros(n_batch)\n",
     "    return x_fake, y_fake\n",
     "\n",
-    "generate_fake_samples(generator, latent_dim, n_batch)[0].shape,generate_fake_samples(generator, latent_dim, n_batch)[1].shape\n",
+    "# generate_fake_samples(generator, latent_dim, n_batch)[0].shape,generate_fake_samples(generator, latent_dim, n_batch)[1].shape\n",
     "\n",
-    "x_fake, y_fake = generate_fake_samples(generator, latent_dim, 1)\n",
-    "x_fake"
+    "# x_fake, y_fake = generate_fake_samples(generator, latent_dim, 1)\n",
+    "# x_fake"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'generate_fake_samples' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-a7935a9971ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Epoch\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdiscriminator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgan_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-18-a7935a9971ca>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(generator, discriminator, gan_model, n_batch, latent_dim, n_epochs)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mX_real\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_real\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselect_real_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;31m# generate 'fake' examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mX_fake\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_fake\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_fake_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlatent_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;31m# create training set for the discriminator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_real\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_fake\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_real\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_fake\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'generate_fake_samples' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# gan training algorithm\n",
     "def train(generator,discriminator,gan_model,n_batch=16,latent_dim=100,n_epochs=10):\n",
@@ -346,7 +315,7 @@
     "        if i % 10 == 0:\n",
     "            print(\"Epoch\", i)\n",
     "        \n",
-    "train(generator,discriminator,gan_model,n_epochs=1)"
+    "# train(generator,discriminator,gan_model,n_epochs=1)"
    ]
   },
   {
