more logging for debugging

--- a/Notebooks/ddspGAN.ipynb
+++ b/Notebooks/ddspGAN.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,9 @@
      "text": [
       "WARNING:absl:If loss_period != weights_period, unexpected results may occur. You should set auto_load_weights to False.\n",
       "INFO:absl:----- GAN Step 0 -----\n",
-      "INFO:absl:Disc loss: 1.3682611 Gen loss: 1.4219556\n"
+      "INFO:absl:disc_losses: [<tf.Tensor: shape=(2,), dtype=float32, numpy=array([0.74146706, 0.6974132 ], dtype=float32)>]\n",
+      "INFO:absl:gen_losses: [<tf.Tensor: shape=(2,), dtype=float32, numpy=array([0.68391144, 0.7151655 ], dtype=float32)>]\n",
+      "INFO:absl:Disc loss: 1.4388802 Gen loss: 1.3990769\n"
      ]
     }
    ],
