implement param to choose between minmax gan and lsgan (loss function bincrossent vs mse)

--- a/Notebooks/ddspGAN.ipynb
+++ b/Notebooks/ddspGAN.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 2\n",
-    "gan_model = GAN(batch_size=batch_size)\n",
+    "gan_model = GAN(batch_size=batch_size,\n",
+    "                loss=tf.keras.losses.mean_squared_error)\n",
     "combined_iter = CombinedIter(gan_model.gen, \n",
     "                             FromTFRecords('./Data/piano/piano30s.tfrecord*'), \n",
     "                             batch_size=batch_size)\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -55,16 +56,12 @@
      "text": [
       "WARNING:absl:If loss_period != weights_period, unexpected results may occur. You should set auto_load_weights to False.\n",
       "INFO:absl:----- GAN Step 0 -----\n",
-      "INFO:absl:disc_losses: [<tf.Tensor: shape=(2,), dtype=float32, numpy=array([0.74146706, 0.6974132 ], dtype=float32)>]\n",
-      "INFO:absl:gen_losses: [<tf.Tensor: shape=(2,), dtype=float32, numpy=array([0.68391144, 0.7151655 ], dtype=float32)>]\n",
-      "INFO:absl:Disc loss: 1.4388802 Gen loss: 1.3990769\n"
+      "INFO:absl:Disc loss: 0.501569 Gen loss: 0.5663351\n"
      ]
     }
    ],
    "source": [
     "train_gan(gan_model,\n",
-    "          opt,\n",
-    "          opt, \n",
     "          combined_iter, \n",
     "          model_dir=\"./models/junk/\", \n",
     "          total_iters=1,\n",
